# internal/handlers/transaction_handler.go
@@ -1,0 +1,51 @@
+package handlers
+
+import (
+	"encoding/json"
+	"kasir-api/internal/models"
+	"kasir-api/internal/service"
+	"net/http"
+)
+
+type TransactionHandler struct {
+	service service.TransactionService
+}
+
+func NewTransactionHandler(service service.TransactionService) *TransactionHandler {
+	return &TransactionHandler{service: service}
+}
+
+// Checkout godoc
+// @Summary Create a new transaction (Checkout)
+// @Description Create a new transaction with multiple items
+// @Tags transaction
+// @Accept json
+// @Produce json
+// @Param checkout body models.CheckoutRequest true "Checkout Data"
+// @Success 201 {object} models.Transaction
+// @Failure 400 {string} string "Invalid request body"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /checkout [post]
+func (h *TransactionHandler) HandleCheckout(w http.ResponseWriter, r *http.Request) {
+	if r.Method != http.MethodPost {
+		http.Error(w, "Method not allowed", http.StatusMethodNotAllowed)
+		return
+	}
+
+	var req models.CheckoutRequest
+	err := json.NewDecoder(r.Body).Decode(&req)
+	if err != nil {
+		http.Error(w, "Invalid request body", http.StatusBadRequest)
+		return
+	}
+
+	transaction, err := h.service.Checkout(req.Items)
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusInternalServerError)
+		return
+	}
+
+	w.Header().Set("Content-Type", "application/json")
+	w.WriteHeader(http.StatusCreated)
+	json.NewEncoder(w).Encode(transaction)
+}
